--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>zrlog</artifactId>
         <groupId>com.zrlog</groupId>
-        <version>2.1.2</version>
+        <version>2.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +13,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <tomcat7Version>9.0.19</tomcat7Version>
+        <tomcat7Version>7.0.91</tomcat7Version>
         <tomcat-scope>compile</tomcat-scope>
         <contextPath>/</contextPath>
     </properties>
@@ -41,6 +41,11 @@
             <version>2.21</version>
         </dependency>
         <dependency>
+            <groupId>com.googlecode.htmlcompressor</groupId>
+            <artifactId>htmlcompressor</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.version}</version>
@@ -62,7 +67,19 @@
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-logging-juli</artifactId>
+            <version>${tomcat7Version}</version>
+            <scope>${tomcat-scope}</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
+            <version>${tomcat7Version}</version>
+            <scope>${tomcat-scope}</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jsp-api</artifactId>
             <version>${tomcat7Version}</version>
             <scope>${tomcat-scope}</scope>
         </dependency>
